coverted to electron-forge

--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "dev": "electron-vite dev",
     "dev:renderer": "electron-vite dev --watch",
     "build": "electron-vite build",
-    "postinstall": "electron-rebuild",
     "preview": "electron-vite preview",
-    "dist": "npm run build && electron-builder",
-    "dist:mac": "npm run build && electron-builder --mac",
+    "make": "electron-forge make",
+    "package": "electron-forge package",
+    "publish": "electron-forge publish",
+    "make:mac": "electron-forge make --platform=darwin",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json",
     "typecheck:web": "tsc --noEmit -p tsconfig.web.json",
@@ -22,14 +23,24 @@
     "test:e2e": "cypress run",
     "test:e2e:open": "cypress open",
     "test:all": "npm run test && npm run test:e2e",
-    "test:ci": "npm run test && cross-env CYPRESS_baseUrl=http://localhost:5173 start-server-and-test dev http://localhost:5173 test:e2e"
+    "test:ci": "npm run test && cross-env CYPRESS_baseUrl=http://localhost:5173 start-server-and-test dev http://localhost:5173 test:e2e",
+    "start": "electron-forge start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@electron-forge/cli": "^7.9.0",
+    "@electron-forge/maker-deb": "^7.9.0",
+    "@electron-forge/maker-dmg": "^7.9.0",
+    "@electron-forge/maker-rpm": "^7.9.0",
+    "@electron-forge/maker-squirrel": "^7.9.0",
+    "@electron-forge/maker-zip": "^7.9.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.9.0",
+    "@electron-forge/plugin-fuses": "^7.9.0",
     "@electron-toolkit/utils": "^4.0.0",
+    "@electron/fuses": "^1.8.0",
     "@jest/globals": "^30.1.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
@@ -48,7 +59,6 @@
     "cross-env": "^10.0.0",
     "cypress": "^15.3.0",
     "electron": "^38.1.2",
-    "electron-builder": "^26.0.12",
     "electron-devtools-installer": "^4.0.0",
     "electron-rebuild": "^3.2.9",
     "electron-vite": "^4.0.1",
@@ -72,6 +82,7 @@
     "@reduxjs/toolkit": "^2.9.0",
     "autoprefixer": "^10.4.21",
     "better-sqlite3": "^12.4.1",
+    "electron-squirrel-startup": "^1.0.1",
     "plotly.js": "^3.1.0",
     "plotly.js-basic-dist-min": "^3.1.0",
     "postcss": "^8.5.6",
